--- a/templates/index_combined.html
+++ b/templates/index_combined.html
@@ -294,7 +294,7 @@
                     </h6>
                     <p class="text-gray-400 mb-2 flex items-center">
                         <span class="mr-2">📱</span>
-                        <a href="tel:305-240-9671" class="hover:text-purple-400 transition-colors">305-240-9671</a>
+                        <a href="tel:0742453547" class="hover:text-purple-400 transition-colors">305-240-9671</a>
                     </p>
                     <p class="text-gray-400 flex items-center">
                         <span class="mr-2">✉️</span>
