index_combined.html

--- a/templates/index_combined.html
+++ b/templates/index_combined.html
@@ -298,7 +298,7 @@
                     </p>
                     <p class="text-gray-400 flex items-center">
                         <span class="mr-2">✉️</span>
-                        <a href="mailto:info@company.com" class="hover:text-purple-400 transition-colors">jaymwanguwe3@gmail.com</a>
+                        <a href="mailto:info@company.com" class="hover:text-purple-400 transition-colors">jmwanguwe3@gmail.com</a>
                     </p>
                 </div>
 
